Meta Data change

--- a/Moeller/HTML/contact-us.html
+++ b/Moeller/HTML/contact-us.html
@@ -2,11 +2,13 @@
 <html>
 <head>
 <meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width" initial-scale="1">	
+<meta name="viewport" content="width=device-width" initial-scale="1">
+	<meta name="author" content="Bill Moeller/Ryan Coen">
+	<meta name="description" content="Moeller Home Management Contact Form">
 <title>Moeller Home Management | Contact Us </title>
 <link rel="stylesheet" href="../CSS/styles.css" media="screen">
 <link rel="stylesheet" href="../CSS/contact.css" media="screen">
-		<script type="text/javascript" src="../js/main.js"></script>
+<script type="text/javascript" src="../js/main.js"></script> 
 <!--Google Fonts-->
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -18,14 +20,14 @@
     <a href="../HTML/contact-us.html">Contact</a>
     </button>
   </div>
-  <img id="overlayLogo" src="../images/noTextLogoWhite.png"> </div>
+  <img id="overlayLogo" alt="MHMLogo" src="../images/noTextLogoWhite.png"> </div>
 <nav>
   <div id="MenuButton" class="container" onclick="toggleNav();myFunction(this)">
     <div class="bar1"></div>
     <div class="bar2"></div>
     <div class="bar3"></div>
   </div>
-  <a href="../index.html"><img class="selected" id="logo" src="../images/noTextLogo.png"></a>
+  <a href="../index.html"><img alt="MHMLogo" class="selected" id="logo" src="../images/noTextLogo.png"></a>
   <div id="menuDiv">
     <ul id="menu">
       <a href="../HTML/our-story.html">
@@ -116,7 +118,7 @@
             <label>
               <input name="prefer" value="technology/security" type="checkbox" class="input-checkbox"/>
               Technology/Security</label>
-			   <label>
+            <label>
               <input name="prefer" value="landscaping" type="checkbox" class="input-checkbox"/>
               Landscaping</label>
             <label>
@@ -184,8 +186,7 @@
       <ul>
         <a href="../HTML/our-story.html">
         <li>Our Story</li>
-        </a>
-		   <a href="../HTML/testimonials.html">
+        </a> <a href="../HTML/testimonials.html">
         <li>Testimonials</li>
         </a>
       </ul>
@@ -201,7 +202,8 @@
     <h2>Connect With Us:</h2>
     <a href="https://www.facebook.com/MoellerHomeManagement/"><img alt="fblogo" src="../images/fb.png"></a></div>
   <a href="../index.html"><img id="logo2" alt="Moeller Home Management Logo" src="../images/logo2.png"></a>
-  <p style="color: white" align="center">© Moeller Home Management 2021 <br> Design by Ryan Coen </p>
+  <p style="color: white" align="center">© Moeller Home Management 2021 <br>
+    Design by Ryan Coen </p>
 </div>
 </body>
 </html>
