--- a/Moeller/HTML/our-services.html
+++ b/Moeller/HTML/our-services.html
@@ -4,6 +4,9 @@
 <meta charset="UTF-8">
 <title>Moeller Home Management | Our Services </title>
 <meta name="viewport" content="width=device-width" initial-scale="1">
+	<meta name="keywords" content="HVAC, General Carpentry, Electrical, Plumbing Appliances, Roofing, Wallpaper, Paint, Flooring, Fence, Generator, Gutter, Insulation, Pool, Masonry & Stucco, Natural Stone & Tile, Doors & Hardware, Elevator, Glass, Garage Doors, Gas Lanterns, Generator & Battery Backup, Wine Cellars, Retractable Outdoor Screens, Outdoor Kitchen & Living Areas, Heating & Misting Systems, Fountains, Sport & Tennis Courts, Humidors, Mold Remediation, Garage Solutions, Fine Art Installation, Christmas Lighting, Automatic Gates, Camera Installation & Monitoring, Security System Installation & Monitoring, Locksmith Services, Fire/Smoke/CO2 Detectors, Fire Sprinklers, Security Lighting, Perimeter Privacy Enclosures, Landscape Lighting, Arborist Services, Fertilizer & Weed Control, Drainage Systems, Hardscapes, Irrigation, Mosquito Systems, Mowing & Trimming, Pest Control, Seasonal Color, Firewood, Housekeeping, Deep Cleaning, Duct, Power Washing, Window, Gutter, Chimney, Carpet, Upholstery, Natural Stone, Rug, Grill, Wood Reconditioning, Professional Organizing, COVID-19 Sanitization, Architectural, Engineering, Interior, Landscape, New Construction Services, Remodel Services, Make-Ready Services, Whole Home Automation, Lighting Systems, Audio & Visual, Security Systems, Routers, Servers, Wi-Fi Devices & Boosters, Lawn & Landscape, Pool,  Housekeeping, Pest Control, Mosquito Treatments, Window Cleaning, Power Washing, French Drain, Gutter Cleaning, HVAC Service, Appliance Service, Plumbing & Sump Pump Maintenance, Milwaukee, Services, Membership">
+	<meta name="description" content="Moeller Home Management List of services and membership options">
+	<meta name="author" content="Bill Moeller/Ryan Coen">
 <link rel="stylesheet" href="../CSS/styles.css" media="screen">
 <link rel="stylesheet" href="../CSS/services.css" media="screen">
 <script type="text/javascript" src="../js/main.js"></script> 
@@ -18,14 +21,14 @@
     <a href="../HTML/contact-us.html">Contact</a>
     </button>
   </div>
-  <img id="overlayLogo" src="../images/noTextLogoWhite.png"> </div>
+  <img id="overlayLogo" alt="MHMLogo" src="../images/noTextLogoWhite.png"> </div>
 <nav>
   <div id="MenuButton" class="container" onclick="toggleNav();myFunction(this)">
     <div class="bar1"></div>
     <div class="bar2"></div>
     <div class="bar3"></div>
   </div>
-  <a href="../index.html"><img class="selected" id="logo" src="../images/noTextLogo.png"></a>
+  <a href="../index.html"><img class="selected" id="logo" src="../images/noTextLogo.png" alt="MHMLogo"></a>
   <div id="menuDiv">
     <ul id="menu">
       <a href="../HTML/our-story.html">
@@ -46,7 +49,7 @@
   </div>
   <div class="div-one"></div>
   <div id="membershipContainer">
-    <div id="memberHeader"> <img id="memberLogo" src="../images/noTextLogoWhite.png">
+    <div id="memberHeader"> <img alt="MHMLogo" id="memberLogo" src="../images/noTextLogoWhite.png">
       <h2>Single projects or year round service;<br>
         Either way, we've got you covered.</h2>
     </div>
@@ -297,7 +300,7 @@
     </a> </div>
 </div>
 <a href="../HTML/contact-us.html">
-<div id="messageContainer"> <img id="messageIcon" src="../images/message.png"> </div>
+<div id="messageContainer"> <img alt="Contact Us" id="messageIcon" src="../images/message.png"> </div>
 </a>
 <div id="footer">
   <div id="footerContainer">
