--- a/Moeller/HTML/our-story.html
+++ b/Moeller/HTML/our-story.html
@@ -2,11 +2,13 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width" initial-scale="1">	
+<meta name="viewport" content="width=device-width" initial-scale="1">
+	<meta name="author" content="Bill Moeller/Ryan Coen">
+	<meta name="description" content="Moeller Home Management Our Story">
 <title>Moeller Home Management | Our Story </title>
 <link rel="stylesheet" href="../CSS/styles.css" media="screen">
 <link rel="stylesheet" href="../CSS/story.css" media="screen">
-	<script type="text/javascript" src="../js/main.js"></script>
+<script type="text/javascript" src="../js/main.js"></script> 
 <!--Google Fonts-->
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -18,14 +20,14 @@
     <a href="../HTML/contact-us.html">Contact</a>
     </button>
   </div>
-  <img id="overlayLogo" src="../images/noTextLogoWhite.png"> </div>
+  <img id="overlayLogo" alt="MHMLogo" src="../images/noTextLogoWhite.png"> </div>
 <nav>
   <div id="MenuButton" class="container" onclick="toggleNav();myFunction(this)">
     <div class="bar1"></div>
     <div class="bar2"></div>
     <div class="bar3"></div>
   </div>
-  <a href="../index.html"><img class="selected" id="logo" src="../images/noTextLogo.png"></a>
+  <a href="../index.html"><img class="selected" alt="MHMLogo" id="logo" src="../images/noTextLogo.png"></a>
   <div id="menuDiv">
     <ul id="menu">
       <a href="../HTML/our-story.html">
@@ -46,34 +48,36 @@
   </div>
   <div class="div-one"></div>
   <div class="div-two" ></div>
-	<div id="aboutContainer">
-		<div id="innerAbout">
-	<h1 align="center">At MHM...</h1>
-	<p>We offer our members the peace of mind that comes from knowing that your home and property are being managed with the best care possible and with a level of service, professionalism, integrity, and craftsmanship unlike any other.  </p>
-			<h3>Peace of Mind comes from:</h3>
-		<ul>
-		<li>Letting us source the perfect service provider for your needs saving you significant time, effort, and frustration.  We will manage every project from beginning through completion.</li>
-		<li>We eliminate the fear associated with “Do I have the right provider?  Can I trust them in my home and how will I know if they are doing great job?  </li>
-		<li>We protect your money in several ways beginning with our Home Physical, which is a comprehensive, detailed inspection of all areas of your home a property which allows us to prioritize maintenance and project needs to reduce the need for expensive future repairs.  We also negotiate all pricing with our providers to ensure you receive the best price and value for your project. </li>
-		</ul>
-		<p>Our clients have the luxury of working with one company for all their home and property needs from routine maintenance items to substantial remodeling of the home and everything in between.</p></div>
-	</div>
+  <div id="aboutContainer">
+    <div id="innerAbout">
+      <h1 align="center">At MHM...</h1>
+      <p>We offer our members the peace of mind that comes from knowing that your home and property are being managed with the best care possible and with a level of service, professionalism, integrity, and craftsmanship unlike any other. </p>
+      <h3>Peace of Mind comes from:</h3>
+      <ul>
+        <li>Letting us source the perfect service provider for your needs saving you significant time, effort, and frustration.  We will manage every project from beginning through completion.</li>
+        <li>We eliminate the fear associated with “Do I have the right provider?  Can I trust them in my home and how will I know if they are doing great job? </li>
+        <li>We protect your money in several ways beginning with our Home Physical, which is a comprehensive, detailed inspection of all areas of your home a property which allows us to prioritize maintenance and project needs to reduce the need for expensive future repairs.  We also negotiate all pricing with our providers to ensure you receive the best price and value for your project. </li>
+      </ul>
+      <p>Our clients have the luxury of working with one company for all their home and property needs from routine maintenance items to substantial remodeling of the home and everything in between.</p>
+    </div>
+  </div>
   <div id="container2">
-    <div id="innerProfile"> <img id="profileImg" src="../images/129287357_101027188549076_9151431049299702872_n.jpg">
+    <div id="innerProfile"> <img alt="Bill Moeller" id="profileImg" src="../images/129287357_101027188549076_9151431049299702872_n.jpg">
       <div id="profileDesc">
         <h3>Meet the Owner</h3>
         <h4>Bill Moeller</h4>
-        <p>My passion is helping others.  At Moeller Home Management, I get to live this through being the single point of contact for my clients with regards to all their home and property needs.  I ensure each of my clients is delighted with my prompt and professional service, excellent communication and especially by the highest quality craftsmanship in every project we undertake.<br><br>
-  
-With an extensive background in home remodeling, project management, appliance and home electronic sales and installation, I have worked with some of the finest craftsman in their respective fields and you can count on them to provide the best possible solution for your project.  <br><br>
-
-My goal is to give you complete peace of mind in knowing that you can not only trust me, but you will be able to trust my network of providers as well.  They will not be in your home if I wouldn’t have them in mine.
-</p>
+        <p>My passion is helping others.  At Moeller Home Management, I get to live this through being the single point of contact for my clients with regards to all their home and property needs.  I ensure each of my clients is delighted with my prompt and professional service, excellent communication and especially by the highest quality craftsmanship in every project we undertake.<br>
+          <br>
+          With an extensive background in home remodeling, project management, appliance and home electronic sales and installation, I have worked with some of the finest craftsman in their respective fields and you can count on them to provide the best possible solution for your project. <br>
+          <br>
+          My goal is to give you complete peace of mind in knowing that you can not only trust me, but you will be able to trust my network of providers as well.  They will not be in your home if I wouldn’t have them in mine. </p>
       </div>
     </div>
   </div>
 </div>
-<a href="../HTML/contact-us.html"><div id="messageContainer"> <img id="messageIcon" src="../images/message.png"> </div></a>
+<a href="../HTML/contact-us.html">
+<div id="messageContainer"> <img alt="Contact Us" id="messageIcon" src="../images/message.png"> </div>
+</a>
 <div id="footer">
   <div id="footerContainer">
     <div class="footerCol"> <a href="../HTML/our-services.html">
@@ -106,8 +110,7 @@ My goal is to give you complete peace of mind in knowing that you can not only t
       <ul>
         <a href="../HTML/our-story.html">
         <li>Our Story</li>
-        </a>
-		   <a href="../HTML/testimonials.html">
+        </a> <a href="../HTML/testimonials.html">
         <li>Testimonials</li>
         </a>
       </ul>
@@ -123,7 +126,8 @@ My goal is to give you complete peace of mind in knowing that you can not only t
     <h2>Connect With Us:</h2>
     <a href="https://www.facebook.com/MoellerHomeManagement/"><img alt="fblogo" src="../images/fb.png"></a></div>
   <a href="../index.html"><img id="logo2" alt="Moeller Home Management Logo" src="../images/logo2.png"></a>
-  <p style="color: white" align="center">© Moeller Home Management 2021 <br> Design by Ryan Coen </p>
+  <p style="color: white" align="center">© Moeller Home Management 2021 <br>
+    Design by Ryan Coen </p>
 </div>
 </body>
 </html>
