--- a/Moeller/index.html
+++ b/Moeller/index.html
@@ -3,8 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width" initial-scale="1">
+	<meta name="keywords" content="home, improvement, concierge, moeller, management, milwaukee, wisconsin, 53220, county">
+	<meta name="author" content="Bill Moeller/Ryan Coen">
+	<meta name="description" content="Moeller Home Management is Milwaukee's Premium Home Improvement Service that aims to save you time, money, and give you piece of mind">
 <title>Moeller Home Management | Milwaukee's Premium Home Improvement Service </title>
-	<script type="text/javascript" src="js/main.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
 <link rel="stylesheet" href="CSS/styles.css" media="screen">
 <link rel="stylesheet" href="CSS/home.css" media="screen">
 <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -24,7 +27,7 @@
     <div class="bar2"></div>
     <div class="bar3"></div>
   </div>
-  <a href="index.html"><img class="selected" id="logo" src="images/noTextLogo.png"></a>
+  <a href="index.html"><img class="selected" id="logo" src="images/noTextLogo.png" alt="MHMLogo"></a>
   <div id="menuDiv">
     <ul id="menu">
       <a href="HTML/our-story.html">
@@ -40,9 +43,10 @@
   </div>
 </nav>
 <div id="sliderCover">
-  <div id="welcomeBanner" align="center"> <img src="images/noTextLogoWhite.png"/>
+  <div id="welcomeBanner" align="center"> <img src="images/noTextLogoWhite.png" alt="MHMLogo"/>
     <h3 id="brand">Moeller Home Management LLC</h3>
-	  <h4>Concierge home solutions. <br>Peace of mind guaranteed.</h4>
+    <h4>Concierge home solutions. <br>
+      Peace of mind guaranteed.</h4>
   </div>
 </div>
 <div class="slider">
@@ -66,9 +70,9 @@
         <div>Maintenance.</div>
       </div>
     </div>
-    <div class="talkBtn">
-      <a href="HTML/contact-us.html"><button class="btn">Let's Talk</button></a>
-    </div>
+    <div class="talkBtn"> <a href="HTML/contact-us.html">
+      <button class="btn">Let's Talk</button>
+      </a> </div>
   </div>
 </div>
 <div id="descContainer">
@@ -77,23 +81,26 @@
     <div class="savings" id="level1">
       <h3>Your time is valuable</h3>
       <p>We protect your time by sourcing, scheduling, negotiating, and managing the best providers for your projects.  
-No more wasting countless hours going through lists of providers only to have them not call back or worse yet, not show up for an appointment.
-</p>
+        No more wasting countless hours going through lists of providers only to have them not call back or worse yet, not show up for an appointment. </p>
     </div>
     <div class="savings" id="level2">
       <h3>Make every dollar count</h3>
-      <p>We maximize every dollar that you invest in your home and property.  Our <b>Home Physical Analysis </b>identifies concerns before they become expensive repairs and allows us to prioritize your maintenance needs. <br><br> Accurate project quoting minimizes those surprise “Extra Charges” and our excellence in craftsmanship ensures that the job is done right the first time.</p>
+      <p>We maximize every dollar that you invest in your home and property.  Our <b>Home Physical Analysis </b>identifies concerns before they become expensive repairs and allows us to prioritize your maintenance needs. <br>
+        <br>
+        Accurate project quoting minimizes those surprise “Extra Charges” and our excellence in craftsmanship ensures that the job is done right the first time.</p>
     </div>
     <div class="savings" id="level3">
       <h3>Give you Peace of Mind</h3>
       <p>No more stress and frustration around trying to find top quality providers for your home’s needs.  No more worrying if they will show up and if the work they are doing is actually the highest quality and done “right”.   You can trust the providers we have working in your home because they will only be in your home if we would let them work in our own homes.</p>
     </div>
-    <div id="talkBtn">
-      <a href="HTML/contact-us.html"><button class="btn">Let's Talk</button></a>
-    </div>
+    <div id="talkBtn"> <a href="HTML/contact-us.html">
+      <button class="btn">Let's Talk</button>
+      </a> </div>
   </div>
 </div>
-<a href="HTML/contact-us.html"><div id="messageContainer"> <img id="messageIcon" src="images/message.png"> </div></a>
+<a href="HTML/contact-us.html">
+<div id="messageContainer"> <img id="messageIcon" src="images/message.png" alt="Contact Us"> </div>
+</a>
 <div id="footer">
   <div id="footerContainer">
     <div class="footerCol"> <a href="HTML/our-services.html">
@@ -126,8 +133,7 @@ No more wasting countless hours going through lists of providers only to have th
       <ul>
         <a href="HTML/our-story.html">
         <li>Our Story</li>
-        </a>
-		   <a href="HTML/testimonials.html">
+        </a> <a href="HTML/testimonials.html">
         <li>Testimonials</li>
         </a>
       </ul>
@@ -143,7 +149,8 @@ No more wasting countless hours going through lists of providers only to have th
     <h2>Connect With Us:</h2>
     <a href="https://www.facebook.com/MoellerHomeManagement/"><img alt="fblogo" src="images/fb.png"></a></div>
   <a href="../index.html"><img id="logo2" alt="Moeller Home Management Logo" src="images/logo2.png"></a>
-  <p style="color: white" align="center">© Moeller Home Management 2021 <br> Design by Ryan Coen </p>
+  <p style="color: white" align="center">© Moeller Home Management 2021 <br>
+    Design by Ryan Coen </p>
 </div>
 </body>
 </html>
