--- a/Moeller/HTML/testimonials.html
+++ b/Moeller/HTML/testimonials.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width" initial-scale="1">
+	<meta name="author" content="Bill Moeller/Ryan Coen">
+	<meta name="description" content="Moeller Home Management Testimonials">
 <title>Moeller Home Management | Testimonials</title>
 <link rel="stylesheet" href="../CSS/styles.css" media="screen">
 <link rel="stylesheet" href="../CSS/testimonial.css" media="screen">
@@ -18,14 +20,14 @@
     <a href="../HTML/contact-us.html">Contact</a>
     </button>
   </div>
-  <img id="overlayLogo" src="../images/noTextLogoWhite.png"> </div>
+  <img id="overlayLogo" alt="MHMLogo" src="../images/noTextLogoWhite.png"> </div>
 <nav>
   <div id="MenuButton" class="container" onclick="toggleNav();myFunction(this)">
     <div class="bar1"></div>
     <div class="bar2"></div>
     <div class="bar3"></div>
   </div>
-  <a href="../index.html"><img class="selected" id="logo" src="../images/noTextLogo.png"></a>
+  <a href="../index.html"><img alt="MHMLogo" class="selected" id="logo" src="../images/noTextLogo.png"></a>
   <div id="menuDiv">
     <ul id="menu">
       <a href="../HTML/our-story.html">
@@ -40,27 +42,26 @@
     </ul>
   </div>
 </nav>
-<div id="hiddenMenu"></div>
 <div id="mainContainer">
-	  <div id="BannerContainer">
+  <div id="BannerContainer">
     <h1>Testimonials</h1>
   </div>
   <div class="div-one"></div>
-<div id="HPA">
+  <div id="HPA">
     <div id="innerHPA">
       <h2><b>Our Clients Love Us</b></h2>
-      <p>Everything we do is for our clients and we love the feedback they give us. Below are just a few of the thoughts our amazing clients have about us.   </p>
+      <p>Everything we do is for our clients and we love the feedback they give us. Below are just a few of the thoughts our amazing clients have about us. </p>
     </div>
   </div>
- <blockquote class="speech-bubble">
-  <p>"I used Moeller Home management for a shower update and Bill did a fantastic job in getting the right people to do the job! Everyone was professional, on time and efficient in all aspects of this job which was challenging. They did a great job and I was so happy with their work and the finished product. I would recommend them for any job you need done."</p>
-  <cite>- Dona C.</cite>
-</blockquote>
-	<h2 align="center">More Coming Soon...</h2>
-	<div class="emptydiv"></div>
+  <blockquote class="speech-bubble">
+	  <img id="quote" alt="quote" src="../images/unnamed.png">
+    <p>"I used Moeller Home management for a shower update and Bill did a fantastic job in getting the right people to do the job! Everyone was professional, on time and efficient in all aspects of this job which was challenging. They did a great job and I was so happy with their work and the finished product. I would recommend them for any job you need done."</p>
+    <cite>- Dona C.</cite> </blockquote>
+  <h2 align="center">More Coming Soon...</h2>
+  <div class="emptydiv"></div>
 </div>
 <a href="../HTML/contact-us.html">
-<div id="messageContainer"> <img id="messageIcon" src="../images/message.png"> </div>
+<div id="messageContainer"> <img alt="Contact Us" id="messageIcon" src="../images/message.png"> </div>
 </a>
 <div id="footer">
   <div id="footerContainer">
@@ -94,8 +95,7 @@
       <ul>
         <a href="../HTML/our-story.html">
         <li>Our Story</li>
-        </a>
-		   <a href="../HTML/testimonials.html">
+        </a> <a href="../HTML/testimonials.html">
         <li>Testimonials</li>
         </a>
       </ul>
@@ -111,7 +111,8 @@
     <h2>Connect With Us:</h2>
     <a href="https://www.facebook.com/MoellerHomeManagement/"><img alt="fblogo" src="../images/fb.png"></a></div>
   <a href="../index.html"><img id="logo2" alt="Moeller Home Management Logo" src="../images/logo2.png"></a>
-  <p style="color: white" align="center">© Moeller Home Management 2021 <br> Design by Ryan Coen </p>
+  <p style="color: white" align="center">© Moeller Home Management 2021 <br>
+    Design by Ryan Coen </p>
 </div>
 </body>
 </html>
